# CPP-2026

./: .gitignore  README.md
Anagrams/: Main.cpp  anagrams  dictTest
Crosswords/: Main.cpp  crosswords
Minesweeper/: CMakeLists.txt  Main.cpp
Minesweeper/include/: MinesBoard.h  MinesColors.h
Minesweeper/src/: MinesBoard.cpp  MinesColors.cpp
Palindromes/: Main.cpp
Snake/: CMakeLists.txt  Main.cpp
Snake/include/: SnakeBoard.h
Snake/src/: SnakeBoard.cpp
Wordle/: Main.cpp  MainV1.cpp  MainV2.cpp  Makefile  results.txt  wordle
